--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /* Google Fonts */
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap");
 * {
   margin: 0;
@@ -30,7 +31,7 @@ header {
   background: #edecea;
 }
 
-/* Sección index.html */
+/* SECCION INDEX.HTML Y NOSOTROS.HTML */
 
 .logo {
   font-size: 1.2rem;
@@ -358,87 +359,7 @@ header {
   }
 }
 
-/* Sección contacto.html */
-
-.contact-main {
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  margin-top: 150px;
-}
-
-.contact-container {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 20px 50px;
-  background-color: #fff;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  border-radius: 34px;
-  place-items: center;
-}
-
-.contact-name {
-  color: #83b735;
-}
-
-form {
-  text-align: left;
-}
-
-.input-container {
-  margin-bottom: 20px;
-}
-
-label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
-}
-
-input[type="text"],
-input[type="email"],
-textarea {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-}
-
-input[type="submit"] {
-  background: #83b735;
-  color: #fff;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-@media screen and (max-width: 600px) {
-  .container {
-    width: 90%;
-  }
-}
-
-.button-contact {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.btn {
-  padding: 10px 14px;
-  background-color: #333;
-  color: #fff;
-  border-radius: 0.3rem;
-  font-size: 14px;
-  text-decoration: none;
-}
-
-input[type="submit"]:hover {
-  background: #8fc53d;
-}
-
-/* Sección productos.html */
+/* SECCION PRODUCTOS.HTML */
 
 .container {
   max-width: 1200px;
@@ -642,7 +563,88 @@ input[type="submit"]:hover {
     color: #444;
   }
 }
-/* seccion login y regristo */
+
+/* SECCION CONTACTO.HTML */
+
+.contact-main {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  margin-top: 150px;
+}
+
+.contact-container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px 50px;
+  background-color: #fff;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 34px;
+  place-items: center;
+}
+
+.contact-name {
+  color: #83b735;
+}
+
+form {
+  text-align: left;
+}
+
+.input-container {
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+input[type="submit"] {
+  background: #83b735;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    width: 90%;
+  }
+}
+
+.button-contact {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.btn {
+  padding: 10px 14px;
+  background-color: #333;
+  color: #fff;
+  border-radius: 0.3rem;
+  font-size: 14px;
+  text-decoration: none;
+}
+
+input[type="submit"]:hover {
+  background: #8fc53d;
+}
+
+/* SECCION INICIODESESION.HTML Y REGISTRO.HTML */
 #mi-body {
   background-image: url(../img/background.jpg);
 }
